# cocoboy

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  conanfile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yaml  quality_check.yaml  reuse.yaml
data/: CMakeLists.txt  config.in.hpp
docs/: doxyfile.in
src/: CMakeLists.txt  cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp
src/cbgb/: CMakeLists.txt  cpu.cpp  cpu.hpp  memory.cpp  memory.hpp
src/cocoboy/: CMakeLists.txt  config.hpp.in  main.cpp
src/cocoboy/soc/: cpu.cpp  cpu.hpp  memory.cpp  memory.hpp
tests/: CMakeLists.txt  main.cpp  test_cpu.cpp  test_memory.cpp  unit_register_bit.cpp  unit_register_pair.cpp
